Added small space between images
They just looked close together and Borowski seems to have a thing for not having things next to each other...

--- a/splash.css
+++ b/splash.css
@@ -38,6 +38,9 @@ header {
 .round-img {
   border-radius: 15px;
 }
+img {
+  margin: 0px 15px;
+}
 /*Style for vertical/horizontal centering*/
 .wrapper {
   display: table;
