--- a/splash.css
+++ b/splash.css
@@ -21,7 +21,7 @@ input:hover, input:focus{
 }
 html, body {
   height: 100%;
-  background-color: #b30000;
+  background-color: #B2D1FF;
   font-family: sans-serif;
   font-size: 16px;
   font-weight: bold;
