Can someone help me with this?
I want the body NOT including the images to be static on the page while the images scroll with the user. Download the css and you'll see what I mean.

--- a/splash.css
+++ b/splash.css
@@ -2,6 +2,7 @@
 a, a:focus, a:hover {
   color: #fff;
   text-decoration: none;
+  
 }
 /*Styling for button*/
 input {
@@ -39,6 +40,9 @@ header {
   border-radius: 15px;
 }
 img {
+  float: right;
+  width: 50%;
+  height: 50%;
   margin: 0px 15px;
 }
 /*Style for vertical/horizontal centering*/
