--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@ a, a:focus, a:hover {
 }
 html, body {
   height: 100%;
-  background-color: #B2D1FF;
+  background-color: #66c3ff;
   font-family: sans-serif;
 }
 body {
