--- a/about.css
+++ b/about.css
@@ -11,7 +11,13 @@ html, body {
 body {
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.4);
+  font-weight: bold;
+  text-shadow: 0 2px 3px rgba(0,0,0,.4);
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  box-shadow: inset 0 0 100px rgba(0,0,0,.4);
 }
 /*Header styling*/
 .company-name {
