--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ input:hover, input:focus{
   background-color: #f7a; 
   box-shadow: 0 0 1px rgba(0,0,0, .75);
 }
-html, body {
+body {
   height: 100%;
   background-color: #66c3ff;
   font-family: sans-serif;
