--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*Global styling for links*/
 a, a:focus, a:hover {
   color: #fff;
-  text-decoration: none;  
+  text-decoration: none;
+  
 }
 /*Styling for button*/
 input {
@@ -19,13 +20,14 @@ input:hover, input:focus{
   background-color: #f7a; 
   box-shadow: 0 0 1px rgba(0,0,0, .75);
 }
-body {
+html, body {
   height: 100%;
   background-color: #66c3ff;
   font-family: sans-serif;
   font-size: 16px;
   font-weight: bold;
   color: rgba(255,255,255,.75);
+  
 }
 body {
   color: #fff;
@@ -48,11 +50,7 @@ article img {
   min-height: 100%;
   margin-right: auto;
   margin-left: auto;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
-  -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
-  -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
-  -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  
 }
 /*Header styling*/
 .company-name {
@@ -103,18 +101,41 @@ html, body {
   height: 100%;
   background-color: #66c3ff;
   font-family: sans-serif;
-}
-
-.about-body {
-  color: #fff;
-  text-align: center;
-  font-weight: bold;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   box-shadow: inset 0 0 100px rgba(0,0,0,.4);
 }
+
+@media (min-width: 850px){
+  .about-body {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+@media (max-width:300px) {
+  .about-body {
+    padding-left: 40%;
+    padding-right: 40%;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    background-color: red
+  }
+}
+
+.about-body {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  
+}
+
 
 /*Header styling*/
 .company-name {
