--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ html, body {
 body {
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.4);
 }
 
 article img {
@@ -55,7 +54,7 @@ article img {
   -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   box-shadow: inset 0 0 100px rgba(0,0,0,.4);
-
+  
 }
 /*Header styling*/
 .company-name {
@@ -76,6 +75,7 @@ article img {
   position: fixed;
   margin: 0 15px;
   width: 45%;
+  
 }
 /*Styling for links in nav*/
 .navbar > li > a {
@@ -106,6 +106,7 @@ html, body {
   height: 100%;
   background-color: #66c3ff;
   font-family: sans-serif;
+  
 }
 
 @media (min-width: 850px){
@@ -115,6 +116,11 @@ html, body {
     color: #fff;
     text-align: center;
     font-weight: bold;
+    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   }
 }
 
@@ -126,6 +132,11 @@ html, body {
     text-align: center;
     font-weight: bold;
     background-color: red
+    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+    box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   }
 }
 
@@ -133,6 +144,11 @@ html, body {
   color: #fff;
   text-align: center;
   font-weight: bold;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  -o-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
+  box-shadow: inset 0 0 100px rgba(0,0,0,.4);
   
 }
 
