--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a, a:focus, a:hover {
     color: #fff;
     text-align: center;
     font-weight: bold;
-    background-color: red
+    background-color: red;
     -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
     -moz-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
     -ms-box-shadow: inset 0 0 100px rgba(0,0,0,.4);
