--- a/style.css
+++ b/style.css
@@ -182,3 +182,69 @@ a, a:focus, a:hover {
   color: #fff;
   border-bottom-color: #fff;
 }
+
+/*Survey items*/
+body {
+  font: 1em sans-serif;
+}
+form, #summary_wrapper {
+  background: linear-gradient(white, lightgrey);
+  display: inline-block;
+  background-color: #f3f3f3;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 15px;
+}
+fieldset {
+  border: solid 1px #a1a1a1;
+  margin-bottom: 5px;
+  color: black
+}
+input, select, textarea {
+  display: block;
+  float: left;
+  margin: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+}
+input[type=text], input[type=password], select, textarea {
+  width: 200px;
+}
+input:required:invalid {
+  background: white right no-repeat url("invalid.png");
+}
+input:required:valid {
+  background: white right no-repeat url("valid.png");
+}
+input:required:valid ~ p.info {
+  visibility: hidden;
+}
+.inputitem {
+  display: block;
+  float: left;
+}
+.labelitem {
+  display: block;
+  float: left;
+  vertical-align: text-top;
+  width: 120px;
+  margin: 2px;
+}
+br {
+  clear: left;
+}
+p.info {
+  font-size: 0.7em;
+  color: red;
+  display: block;
+  margin: 0 0 0 2px;
+}
+#reset_submit {
+  float: right;
+}
+#summary_wrapper {
+  display: none;
+}
